// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`P6ConnectionForm - Snapshot Tests > matches snapshot for initial state 1`] = `
<div>
  <main
    aria-label="P6 Connection Setup"
    class="min-h-screen flex flex-col items-center justify-center px-4 sm:px-6 md:px-8 lg:px-12 py-8 sm:py-12"
    role="main"
  >
    <div
      class="w-full max-w-3xl mx-auto"
    >
      <div
        class="mb-6 sm:mb-8 animate-fade-in"
      >
        <nav
          aria-label="Progress"
          style="width: 100%;"
        >
          <div
            style="position: relative; margin: 0px auto; max-width: 48rem; background-color: rgba(17, 24, 39, 0.8); border: 1px solid rgba(148, 163, 184, 0.15); border-radius: 1rem; padding: 1.5rem;"
          >
            <div
              style="display: flex; justify-content: center; margin-bottom: 1.5rem;"
            >
              <div
                style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; border-radius: 9999px; background-color: rgb(17, 24, 39); border: 1px solid rgba(148, 163, 184, 0.15);"
              >
                <span
                  style="font-size: 0.75rem; font-family: var(--font-mono), monospace; color: rgb(100, 116, 139); letter-spacing: 0.05em;"
                >
                  STEP
                </span>
                <span
                  style="font-size: 1.25rem; font-weight: 700; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(0, 212, 255);"
                >
                  2
                </span>
                <span
                  style="font-size: 0.75rem; font-family: var(--font-mono), monospace; color: rgb(100, 116, 139); letter-spacing: 0.05em;"
                >
                  OF 
                  5
                </span>
              </div>
            </div>
            <div
              style="position: relative; height: 48px;"
            >
              <div
                style="position: absolute; top: 50%; left: 0px; right: 0px; transform: translateY(-50%); height: 6px; background-color: rgba(148, 163, 184, 0.15); border-radius: 9999px;"
              />
              <div
                style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%); height: 6px; width: 25%; background: linear-gradient(to right, #10b981, #00d4ff); border-radius: 9999px; transition: width 0.5s ease-out;"
              />
              <ol
                role="list"
                style="position: relative; display: flex; align-items: center; justify-content: space-between; list-style: none; margin: 0px; padding: 0px;"
              >
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgb(16, 185, 129); background-color: rgb(16, 185, 129); box-shadow: 0 0 16px -4px rgba(16,185,129,0.4); transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(10, 15, 26);"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="20"
                        stroke="currentColor"
                        style="width: 20px; height: 20px; flex-shrink: 0;"
                        viewBox="0 0 24 24"
                        width="20"
                      >
                        <path
                          d="M5 13l4 4L19 7"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2.5"
                        />
                      </svg>
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(16, 185, 129); transition: color 0.2s;"
                  >
                    Welcome
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    aria-current="step"
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgb(0, 212, 255); background-color: rgb(0, 212, 255); box-shadow: 0 0 20px -4px rgba(0,212,255,0.4); transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: absolute; inset: 0; border-radius: 50%; background-color: rgb(0, 212, 255); opacity: 0.3; animation: ping 1.5s cubic-bezier(0, 0, 0.2, 1) infinite;"
                    />
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(10, 15, 26);"
                    >
                      2
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(0, 212, 255); transition: color 0.2s;"
                  >
                    P6
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      3
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    SAP
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      4
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    Projects
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      5
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    Complete
                  </span>
                </li>
              </ol>
            </div>
            <div
              style="height: 2.5rem;"
            />
          </div>
          <p
            style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
          >
            Step 
            2
             of 
            5
            : P6
          </p>
        </nav>
      </div>
      <div
        class="text-center mb-8 sm:mb-10 animate-slide-up"
      >
        <div
          class="inline-flex items-center gap-2 sm:gap-3 mb-4 sm:mb-5"
        >
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-amber
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            SCHEDULE
          </span>
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-cyan
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            STEP 2 OF 5
          </span>
        </div>
        <h1
          class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold font-display text-[var(--orion-text-primary)] mb-3 sm:mb-4"
        >
          Connect to 
          <span
            class="text-gradient-amber"
          >
            Primavera P6
          </span>
        </h1>
        <p
          class="text-base sm:text-lg text-[var(--orion-text-secondary)] max-w-xl mx-auto leading-relaxed"
        >
          Enter your P6 SOAP API credentials to sync schedule data including projects, WBS, activities, and resources.
        </p>
      </div>
      <div
        class="
        glass-card-elevated
        p-4 sm:p-6
        
        
        transition-all duration-200 ease-orion-out
        p-6 sm:p-8 border-l-4 border-l-[var(--orion-amber)] animate-scale-in delay-200
      "
        style="max-width: 100%; overflow: hidden;"
      >
        <div
          class="flex items-center gap-3 mb-6 pb-6 border-b border-[var(--orion-border)]"
        >
          <div
            class="w-12 h-12 rounded-xl bg-[var(--orion-amber)]/10 border border-[var(--orion-amber)]/30 flex items-center justify-center glow-box-amber"
          >
            <span
              class="text-lg font-bold font-mono text-[var(--orion-amber)]"
            >
              P6
            </span>
          </div>
          <div>
            <h2
              class="font-semibold text-[var(--orion-text-primary)] font-display"
            >
              Primavera P6 SOAP API
            </h2>
            <p
              class="text-sm text-[var(--orion-text-muted)]"
            >
              Enterprise project scheduling
            </p>
          </div>
        </div>
        <form
          class="space-y-5"
        >
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_4c_-wsdl-url"
            >
              WSDL Base URL
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_4c_-wsdl-url-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
              id="_r_4c_-wsdl-url"
              placeholder="https://p6server.company.com/p6ws/services/"
              required=""
              style="width: 100%; max-width: 100%; box-sizing: border-box;"
              type="url"
              value=""
            />
            <p
              class="orion-hint"
              id="_r_4c_-wsdl-url-hint"
            >
              The P6 Web Services endpoint URL
            </p>
          </div>
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_4c_-database"
            >
              Database Instance
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_4c_-database-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
              id="_r_4c_-database"
              placeholder="PMDB"
              required=""
              style="width: 100%; max-width: 100%; box-sizing: border-box;"
              type="text"
              value=""
            />
            <p
              class="orion-hint"
              id="_r_4c_-database-hint"
            >
              The P6 database instance name
            </p>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_4c_-username"
              >
                Username
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="username"
                class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
                id="_r_4c_-username"
                placeholder="p6admin"
                required=""
                style="width: 100%; max-width: 100%; box-sizing: border-box;"
                type="text"
                value=""
              />
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_4c_-password"
              >
                Password
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="current-password"
                class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
                id="_r_4c_-password"
                required=""
                style="width: 100%; max-width: 100%; box-sizing: border-box;"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="pt-2"
          >
            <button
              aria-busy="false"
              class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          w-full
          cursor-pointer
          border-[var(--orion-amber)]/30 hover:border-[var(--orion-amber)] hover:text-[var(--orion-amber)]
        "
              type="submit"
            >
              <span>
                Test Connection
              </span>
            </button>
          </div>
        </form>
      </div>
      <div
        class="mt-6 sm:mt-8 flex flex-col sm:flex-row gap-3 sm:gap-4 animate-slide-up delay-400"
      >
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1 order-2 sm:order-1
        "
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="mr-2 flex-shrink-0"
              fill="none"
              height="20"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M11 17l-5-5m0 0l5-5m-5 5h12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Back
          </span>
        </button>
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-primary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          opacity-50 cursor-not-allowed pointer-events-none
          flex-1 order-1 sm:order-2
        "
          disabled=""
          type="button"
        >
          <span>
            Continue
            <svg
              aria-hidden="true"
              class="ml-2 flex-shrink-0 transition-transform group-hover:translate-x-1"
              fill="none"
              height="20"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M13 7l5 5m0 0l-5 5m5-5H6"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        class="text-center text-sm text-[var(--orion-text-muted)] mt-6 sm:mt-8 font-mono animate-fade-in delay-600"
      >
        Need help? Check the
         
        <a
          class="text-[var(--orion-cyan)] hover:underline hover:text-[var(--orion-cyan)] transition-colors"
          href="#"
        >
          P6 Integration Guide
        </a>
      </p>
    </div>
  </main>
</div>
`;

exports[`P6ConnectionForm - Snapshot Tests > matches snapshot with success result 1`] = `
<div>
  <main
    aria-label="P6 Connection Setup"
    class="min-h-screen flex flex-col items-center justify-center px-4 sm:px-6 md:px-8 lg:px-12 py-8 sm:py-12"
    role="main"
  >
    <div
      class="w-full max-w-3xl mx-auto"
    >
      <div
        class="mb-6 sm:mb-8 animate-fade-in"
      >
        <nav
          aria-label="Progress"
          style="width: 100%;"
        >
          <div
            style="position: relative; margin: 0px auto; max-width: 48rem; background-color: rgba(17, 24, 39, 0.8); border: 1px solid rgba(148, 163, 184, 0.15); border-radius: 1rem; padding: 1.5rem;"
          >
            <div
              style="display: flex; justify-content: center; margin-bottom: 1.5rem;"
            >
              <div
                style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; border-radius: 9999px; background-color: rgb(17, 24, 39); border: 1px solid rgba(148, 163, 184, 0.15);"
              >
                <span
                  style="font-size: 0.75rem; font-family: var(--font-mono), monospace; color: rgb(100, 116, 139); letter-spacing: 0.05em;"
                >
                  STEP
                </span>
                <span
                  style="font-size: 1.25rem; font-weight: 700; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(0, 212, 255);"
                >
                  2
                </span>
                <span
                  style="font-size: 0.75rem; font-family: var(--font-mono), monospace; color: rgb(100, 116, 139); letter-spacing: 0.05em;"
                >
                  OF 
                  5
                </span>
              </div>
            </div>
            <div
              style="position: relative; height: 48px;"
            >
              <div
                style="position: absolute; top: 50%; left: 0px; right: 0px; transform: translateY(-50%); height: 6px; background-color: rgba(148, 163, 184, 0.15); border-radius: 9999px;"
              />
              <div
                style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%); height: 6px; width: 25%; background: linear-gradient(to right, #10b981, #00d4ff); border-radius: 9999px; transition: width 0.5s ease-out;"
              />
              <ol
                role="list"
                style="position: relative; display: flex; align-items: center; justify-content: space-between; list-style: none; margin: 0px; padding: 0px;"
              >
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgb(16, 185, 129); background-color: rgb(16, 185, 129); box-shadow: 0 0 16px -4px rgba(16,185,129,0.4); transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(10, 15, 26);"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="20"
                        stroke="currentColor"
                        style="width: 20px; height: 20px; flex-shrink: 0;"
                        viewBox="0 0 24 24"
                        width="20"
                      >
                        <path
                          d="M5 13l4 4L19 7"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2.5"
                        />
                      </svg>
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(16, 185, 129); transition: color 0.2s;"
                  >
                    Welcome
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    aria-current="step"
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgb(0, 212, 255); background-color: rgb(0, 212, 255); box-shadow: 0 0 20px -4px rgba(0,212,255,0.4); transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: absolute; inset: 0; border-radius: 50%; background-color: rgb(0, 212, 255); opacity: 0.3; animation: ping 1.5s cubic-bezier(0, 0, 0.2, 1) infinite;"
                    />
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(10, 15, 26);"
                    >
                      2
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(0, 212, 255); transition: color 0.2s;"
                  >
                    P6
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      3
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    SAP
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      4
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    Projects
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      5
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    Complete
                  </span>
                </li>
              </ol>
            </div>
            <div
              style="height: 2.5rem;"
            />
          </div>
          <p
            style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
          >
            Step 
            2
             of 
            5
            : P6
          </p>
        </nav>
      </div>
      <div
        class="text-center mb-8 sm:mb-10 animate-slide-up"
      >
        <div
          class="inline-flex items-center gap-2 sm:gap-3 mb-4 sm:mb-5"
        >
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-amber
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            SCHEDULE
          </span>
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-cyan
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            STEP 2 OF 5
          </span>
        </div>
        <h1
          class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold font-display text-[var(--orion-text-primary)] mb-3 sm:mb-4"
        >
          Connect to 
          <span
            class="text-gradient-amber"
          >
            Primavera P6
          </span>
        </h1>
        <p
          class="text-base sm:text-lg text-[var(--orion-text-secondary)] max-w-xl mx-auto leading-relaxed"
        >
          Enter your P6 SOAP API credentials to sync schedule data including projects, WBS, activities, and resources.
        </p>
      </div>
      <div
        class="
        glass-card-elevated
        p-4 sm:p-6
        
        
        transition-all duration-200 ease-orion-out
        p-6 sm:p-8 border-l-4 border-l-[var(--orion-amber)] animate-scale-in delay-200
      "
        style="max-width: 100%; overflow: hidden;"
      >
        <div
          class="flex items-center gap-3 mb-6 pb-6 border-b border-[var(--orion-border)]"
        >
          <div
            class="w-12 h-12 rounded-xl bg-[var(--orion-amber)]/10 border border-[var(--orion-amber)]/30 flex items-center justify-center glow-box-amber"
          >
            <span
              class="text-lg font-bold font-mono text-[var(--orion-amber)]"
            >
              P6
            </span>
          </div>
          <div>
            <h2
              class="font-semibold text-[var(--orion-text-primary)] font-display"
            >
              Primavera P6 SOAP API
            </h2>
            <p
              class="text-sm text-[var(--orion-text-muted)]"
            >
              Enterprise project scheduling
            </p>
          </div>
        </div>
        <form
          class="space-y-5"
        >
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_4m_-wsdl-url"
            >
              WSDL Base URL
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_4m_-wsdl-url-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
              id="_r_4m_-wsdl-url"
              placeholder="https://p6server.company.com/p6ws/services/"
              required=""
              style="width: 100%; max-width: 100%; box-sizing: border-box;"
              type="url"
              value="https://p6.acme-epc.com/p6ws/services/"
            />
            <p
              class="orion-hint"
              id="_r_4m_-wsdl-url-hint"
            >
              The P6 Web Services endpoint URL
            </p>
          </div>
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_4m_-database"
            >
              Database Instance
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_4m_-database-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
              id="_r_4m_-database"
              placeholder="PMDB"
              required=""
              style="width: 100%; max-width: 100%; box-sizing: border-box;"
              type="text"
              value="PMDB"
            />
            <p
              class="orion-hint"
              id="_r_4m_-database-hint"
            >
              The P6 database instance name
            </p>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_4m_-username"
              >
                Username
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="username"
                class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
                id="_r_4m_-username"
                placeholder="p6admin"
                required=""
                style="width: 100%; max-width: 100%; box-sizing: border-box;"
                type="text"
                value="admin"
              />
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_4m_-password"
              >
                Password
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="current-password"
                class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
                id="_r_4m_-password"
                required=""
                style="width: 100%; max-width: 100%; box-sizing: border-box;"
                type="password"
                value="secret123"
              />
            </div>
          </div>
          <div
            class="pt-2"
          >
            <button
              aria-busy="false"
              class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          w-full
          cursor-pointer
          border-[var(--orion-amber)]/30 hover:border-[var(--orion-amber)] hover:text-[var(--orion-amber)]
        "
              type="submit"
            >
              <span>
                Test Connection
              </span>
            </button>
          </div>
        </form>
        <div
          class="mt-6"
        >
          <div
            class="p-4 rounded-xl border border-[var(--orion-emerald)]/30 bg-[var(--orion-emerald)]/10 animate-scale-in"
            role="alert"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-10 h-10 rounded-lg bg-[var(--orion-emerald)]/20 flex items-center justify-center"
              >
                <svg
                  aria-hidden="true"
                  class="text-[var(--orion-emerald)]"
                  fill="none"
                  stroke="currentColor"
                  style="width: 20px; height: 20px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5 13l4 4L19 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <div>
                <p
                  class="font-semibold text-[var(--orion-emerald)] font-display"
                >
                  Connection Successful
                </p>
                <div
                  class="flex flex-wrap gap-3 mt-1"
                >
                  <span
                    class="text-sm text-[var(--orion-text-secondary)] font-mono"
                  >
                    42
                     projects found
                  </span>
                  <span
                    class="text-sm text-[var(--orion-text-secondary)] font-mono"
                  >
                    v
                    P6 EPPM 21.12
                  </span>
                  <span
                    class="text-sm text-[var(--orion-text-secondary)] font-mono"
                  >
                    150
                    ms
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-6 sm:mt-8 flex flex-col sm:flex-row gap-3 sm:gap-4 animate-slide-up delay-400"
      >
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1 order-2 sm:order-1
        "
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="mr-2 flex-shrink-0"
              fill="none"
              height="20"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M11 17l-5-5m0 0l5-5m-5 5h12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Back
          </span>
        </button>
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-primary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1 order-1 sm:order-2
        "
          type="button"
        >
          <span>
            Continue
            <svg
              aria-hidden="true"
              class="ml-2 flex-shrink-0 transition-transform group-hover:translate-x-1"
              fill="none"
              height="20"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M13 7l5 5m0 0l-5 5m5-5H6"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        class="text-center text-sm text-[var(--orion-text-muted)] mt-6 sm:mt-8 font-mono animate-fade-in delay-600"
      >
        Need help? Check the
         
        <a
          class="text-[var(--orion-cyan)] hover:underline hover:text-[var(--orion-cyan)] transition-colors"
          href="#"
        >
          P6 Integration Guide
        </a>
      </p>
    </div>
  </main>
</div>
`;

exports[`P6ConnectionForm - Snapshot Tests > matches snapshot with validation errors 1`] = `
<div>
  <main
    aria-label="P6 Connection Setup"
    class="min-h-screen flex flex-col items-center justify-center px-4 sm:px-6 md:px-8 lg:px-12 py-8 sm:py-12"
    role="main"
  >
    <div
      class="w-full max-w-3xl mx-auto"
    >
      <div
        class="mb-6 sm:mb-8 animate-fade-in"
      >
        <nav
          aria-label="Progress"
          style="width: 100%;"
        >
          <div
            style="position: relative; margin: 0px auto; max-width: 48rem; background-color: rgba(17, 24, 39, 0.8); border: 1px solid rgba(148, 163, 184, 0.15); border-radius: 1rem; padding: 1.5rem;"
          >
            <div
              style="display: flex; justify-content: center; margin-bottom: 1.5rem;"
            >
              <div
                style="display: inline-flex; align-items: center; gap: 0.5rem; padding: 0.5rem 1rem; border-radius: 9999px; background-color: rgb(17, 24, 39); border: 1px solid rgba(148, 163, 184, 0.15);"
              >
                <span
                  style="font-size: 0.75rem; font-family: var(--font-mono), monospace; color: rgb(100, 116, 139); letter-spacing: 0.05em;"
                >
                  STEP
                </span>
                <span
                  style="font-size: 1.25rem; font-weight: 700; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(0, 212, 255);"
                >
                  2
                </span>
                <span
                  style="font-size: 0.75rem; font-family: var(--font-mono), monospace; color: rgb(100, 116, 139); letter-spacing: 0.05em;"
                >
                  OF 
                  5
                </span>
              </div>
            </div>
            <div
              style="position: relative; height: 48px;"
            >
              <div
                style="position: absolute; top: 50%; left: 0px; right: 0px; transform: translateY(-50%); height: 6px; background-color: rgba(148, 163, 184, 0.15); border-radius: 9999px;"
              />
              <div
                style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%); height: 6px; width: 25%; background: linear-gradient(to right, #10b981, #00d4ff); border-radius: 9999px; transition: width 0.5s ease-out;"
              />
              <ol
                role="list"
                style="position: relative; display: flex; align-items: center; justify-content: space-between; list-style: none; margin: 0px; padding: 0px;"
              >
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgb(16, 185, 129); background-color: rgb(16, 185, 129); box-shadow: 0 0 16px -4px rgba(16,185,129,0.4); transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(10, 15, 26);"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="20"
                        stroke="currentColor"
                        style="width: 20px; height: 20px; flex-shrink: 0;"
                        viewBox="0 0 24 24"
                        width="20"
                      >
                        <path
                          d="M5 13l4 4L19 7"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2.5"
                        />
                      </svg>
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(16, 185, 129); transition: color 0.2s;"
                  >
                    Welcome
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    aria-current="step"
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgb(0, 212, 255); background-color: rgb(0, 212, 255); box-shadow: 0 0 20px -4px rgba(0,212,255,0.4); transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: absolute; inset: 0; border-radius: 50%; background-color: rgb(0, 212, 255); opacity: 0.3; animation: ping 1.5s cubic-bezier(0, 0, 0.2, 1) infinite;"
                    />
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(10, 15, 26);"
                    >
                      2
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(0, 212, 255); transition: color 0.2s;"
                  >
                    P6
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      3
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    SAP
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      4
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    Projects
                  </span>
                </li>
                <li
                  style="position: relative; display: flex; flex-direction: column; align-items: center;"
                >
                  <div
                    style="position: relative; display: flex; align-items: center; justify-content: center; width: 48px; height: 48px; border-radius: 50%; border: 2px solid; border-color: rgba(148, 163, 184, 0.15); background-color: rgb(17, 24, 39); box-shadow: none; transition: all 0.3s ease-out;"
                  >
                    <span
                      style="position: relative; z-index: 10; font-family: var(--font-mono), monospace; font-weight: 700; font-size: 1rem; color: rgb(100, 116, 139);"
                    >
                      5
                    </span>
                  </div>
                  <span
                    style="position: absolute; top: 100%; margin-top: 0.75rem; white-space: nowrap; font-size: 0.875rem; font-weight: 500; font-family: var(--font-outfit), system-ui, sans-serif; color: rgb(100, 116, 139); transition: color 0.2s;"
                  >
                    Complete
                  </span>
                </li>
              </ol>
            </div>
            <div
              style="height: 2.5rem;"
            />
          </div>
          <p
            style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
          >
            Step 
            2
             of 
            5
            : P6
          </p>
        </nav>
      </div>
      <div
        class="text-center mb-8 sm:mb-10 animate-slide-up"
      >
        <div
          class="inline-flex items-center gap-2 sm:gap-3 mb-4 sm:mb-5"
        >
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-amber
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            SCHEDULE
          </span>
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-cyan
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            STEP 2 OF 5
          </span>
        </div>
        <h1
          class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold font-display text-[var(--orion-text-primary)] mb-3 sm:mb-4"
        >
          Connect to 
          <span
            class="text-gradient-amber"
          >
            Primavera P6
          </span>
        </h1>
        <p
          class="text-base sm:text-lg text-[var(--orion-text-secondary)] max-w-xl mx-auto leading-relaxed"
        >
          Enter your P6 SOAP API credentials to sync schedule data including projects, WBS, activities, and resources.
        </p>
      </div>
      <div
        class="
        glass-card-elevated
        p-4 sm:p-6
        
        
        transition-all duration-200 ease-orion-out
        p-6 sm:p-8 border-l-4 border-l-[var(--orion-amber)] animate-scale-in delay-200
      "
        style="max-width: 100%; overflow: hidden;"
      >
        <div
          class="flex items-center gap-3 mb-6 pb-6 border-b border-[var(--orion-border)]"
        >
          <div
            class="w-12 h-12 rounded-xl bg-[var(--orion-amber)]/10 border border-[var(--orion-amber)]/30 flex items-center justify-center glow-box-amber"
          >
            <span
              class="text-lg font-bold font-mono text-[var(--orion-amber)]"
            >
              P6
            </span>
          </div>
          <div>
            <h2
              class="font-semibold text-[var(--orion-text-primary)] font-display"
            >
              Primavera P6 SOAP API
            </h2>
            <p
              class="text-sm text-[var(--orion-text-muted)]"
            >
              Enterprise project scheduling
            </p>
          </div>
        </div>
        <form
          class="space-y-5"
        >
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_4h_-wsdl-url"
            >
              WSDL Base URL
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_4h_-wsdl-url-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
              id="_r_4h_-wsdl-url"
              placeholder="https://p6server.company.com/p6ws/services/"
              required=""
              style="width: 100%; max-width: 100%; box-sizing: border-box;"
              type="url"
              value=""
            />
            <p
              class="orion-hint"
              id="_r_4h_-wsdl-url-hint"
            >
              The P6 Web Services endpoint URL
            </p>
          </div>
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_4h_-database"
            >
              Database Instance
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_4h_-database-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
              id="_r_4h_-database"
              placeholder="PMDB"
              required=""
              style="width: 100%; max-width: 100%; box-sizing: border-box;"
              type="text"
              value=""
            />
            <p
              class="orion-hint"
              id="_r_4h_-database-hint"
            >
              The P6 database instance name
            </p>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_4h_-username"
              >
                Username
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="username"
                class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
                id="_r_4h_-username"
                placeholder="p6admin"
                required=""
                style="width: 100%; max-width: 100%; box-sizing: border-box;"
                type="text"
                value=""
              />
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_4h_-password"
              >
                Password
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="current-password"
                class="
          input-field
          px-4 py-3 text-base min-h-[48px]
          
          
          
          w-full rounded-xl
          
        "
                id="_r_4h_-password"
                required=""
                style="width: 100%; max-width: 100%; box-sizing: border-box;"
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="pt-2"
          >
            <button
              aria-busy="false"
              class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          w-full
          cursor-pointer
          border-[var(--orion-amber)]/30 hover:border-[var(--orion-amber)] hover:text-[var(--orion-amber)]
        "
              type="submit"
            >
              <span>
                Test Connection
              </span>
            </button>
          </div>
        </form>
      </div>
      <div
        class="mt-6 sm:mt-8 flex flex-col sm:flex-row gap-3 sm:gap-4 animate-slide-up delay-400"
      >
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1 order-2 sm:order-1
        "
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="mr-2 flex-shrink-0"
              fill="none"
              height="20"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M11 17l-5-5m0 0l5-5m-5 5h12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Back
          </span>
        </button>
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-primary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          opacity-50 cursor-not-allowed pointer-events-none
          flex-1 order-1 sm:order-2
        "
          disabled=""
          type="button"
        >
          <span>
            Continue
            <svg
              aria-hidden="true"
              class="ml-2 flex-shrink-0 transition-transform group-hover:translate-x-1"
              fill="none"
              height="20"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M13 7l5 5m0 0l-5 5m5-5H6"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        class="text-center text-sm text-[var(--orion-text-muted)] mt-6 sm:mt-8 font-mono animate-fade-in delay-600"
      >
        Need help? Check the
         
        <a
          class="text-[var(--orion-cyan)] hover:underline hover:text-[var(--orion-cyan)] transition-colors"
          href="#"
        >
          P6 Integration Guide
        </a>
      </p>
    </div>
  </main>
</div>
`;
